syntax = "proto3";

package com.fortify.aviator;

option java_multiple_files = true;
option java_package = "com.fortify.aviator.project";
option java_outer_classname = "ProjectProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Project {
  int64 id = 1;
  string name = 2;
  int64 entitlement_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  bool is_deleted = 6;
}

message CreateProjectRequest {
  string name = 1;
  string tenantName =2;
  string signature = 3;
  string message = 4;
}

message UpdateProjectRequest {
  int64 id = 1;
  string name = 2;

  string signature = 3;
  string message = 4;
  string tenantName =5;

}

message ProjectById {
  int64 id = 1;
  string signature = 2;
  string message = 3;
  string tenantName =4;

}
message ProjectByTenantName {
  string name = 1;
  string signature = 2;
  string message = 3;
}

message ProjectList {
  repeated Project projects = 1;
}
message ProjectResponseMessage {
  string responseMessage = 1;
}
service ProjectService {

  rpc CreateProject(CreateProjectRequest) returns (Project) {}

  rpc GetProject(ProjectById) returns (Project) {}

  rpc UpdateProject(UpdateProjectRequest) returns (Project) {}

  rpc DeleteProject(ProjectById) returns (ProjectResponseMessage) {}

  rpc ListProjects(ProjectByTenantName) returns (ProjectList) {}

  rpc ListProjectsByEntitlement(ProjectById) returns (ProjectList) {}
}